[gd_scene load_steps=4 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, -0.75, 0, 0.5, -3.27835e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, -0.75, 0, 0.5, -3.27835e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="floorCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000518084, -0.0101259, 0.0400425 )
enabled = true
cast_to = Vector3( 0, -1.25, 0 )

[node name="leftCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( -1, 0, 0 )

[node name="rightCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 1, 0, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0 )
current = true
fov = 90.0
